--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hbs": "~3.1.0",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "~1.6.1",
